cluster-go/lightspeed-benchmark/test-05/templates/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ols-test-05
  labels:
    musthavenodeselector: "true"
