cluster-go/lightspeed-benchmark/test-05/templates/tetris-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: tetris
  namespace: ols-test-05
spec:
  selector:
    app: tetris
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
